data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3081.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\96\80\80\80\00\01\03\65\6e"
    "\76\0e\65\72\72\6f\6e\65\6f\75\73\5f\66\75\6e\63"
    "\00\00\03\82\80\80\80\00\01\01\0a\8b\80\80\80\00"
    "\01\85\80\80\80\00\00\10\00\0f\0b"
  )
""
)